[EDELIVERY-3147] parent pom changes + refactoring