@@ -47,8 +47,9 @@
 
         <!-- Sonar properties -->
         <sonar.binaries>target/classes</sonar.binaries>
-        <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco-ut.exec</sonar.jacoco.reportPath>
-        <sonar.jacoco.itReportPath>${project.basedir}/../target/jacoco-it.exec</sonar.jacoco.itReportPath>
+        <sonar.jacoco.codeCoveragePath>${maven.multiModuleProjectDirectory}/target</sonar.jacoco.codeCoveragePath>
+        <sonar.jacoco.reportPath>${sonar.jacoco.codeCoveragePath}/jacoco-ut.exec</sonar.jacoco.reportPath>
+        <sonar.jacoco.itReportPath>${sonar.jacoco.codeCoveragePath}/jacoco-it.exec</sonar.jacoco.itReportPath>
         <sonar.scm.disabled>true</sonar.scm.disabled>
         <sonar.exclusions>
             **/target/**,
@@ -60,7 +61,23 @@
             **/api/usermessage/domain/**
         </sonar.exclusions>
         <sonar.core.coveragePlugin>jacoco</sonar.core.coveragePlugin>
-        <sonar.host.url>http://edelquality.westeurope.cloudapp.azure.com:9000/sonar/</sonar.host.url>
+        <!--<sonar.host.url>http://edelquality.westeurope.cloudapp.azure.com:9000/sonar/</sonar.host.url>-->
+
+        <!-- soap ui code coverage start -->
+        <!--<jacoco.maven.plugin.version>0.7.9</jacoco.maven.plugin.version>-->
+        <jacoco.maven.plugin.version>0.7.7.201606060606</jacoco.maven.plugin.version>
+        <!--<mysql.version>5.1.34</mysql.version>-->
+        <soapui.plugin.version>5.1.2</soapui.plugin.version>
+        <soapui.root.folder>${maven.multiModuleProjectDirectory}/Domibus-MSH-soapui-tests/src/main/soapui</soapui.root.folder>
+        <soapui.scripting.library>${soapui.root.folder}/scripting</soapui.scripting.library>
+        <soapui.ext.libraries>${soapui.root.folder}/lib</soapui.ext.libraries>
+        <sonar.jacoco.remotePort.blue>${jacocoRemotePortBlue}</sonar.jacoco.remotePort.blue>
+        <sonar.jacoco.remoteAddress.blue>${jacocoRemoteAddressBlue}</sonar.jacoco.remoteAddress.blue>
+        <sonar.jacoco.remotePort.red>${jacocoRemotePortRed}</sonar.jacoco.remotePort.red>
+        <sonar.jacoco.remoteAddress.red>${jacocoRemoteAddressRed}</sonar.jacoco.remoteAddress.red>
+        <!-- soap ui code coverage end -->
+
+        <sonar.host.url>http://localhost:9000/</sonar.host.url>
         <sonar.ws.timeout>300</sonar.ws.timeout>
         <!--   Enable the proxy when running sonar from within the EC network -->
         <!--<sonar.web.javaAdditionalOpts>-Dhttp.proxyHost=158.169.9.13 -Dhttp.proxyPort=8012 -Dhttp.proxyUser=theuser -Dhttp.proxyPassword=thepassword -Dhttps.proxyHost=158.169.9.13 -Dhttps.proxyPort=8012 -Dhttps.proxyUser=theuser -Dhttps.proxyPassword=thepassword -Dhttps.nonProxyHosts=localhost -Dhttp.nonProxyHosts=localhost</sonar.web.javaAdditionalOpts>-->
@@ -548,8 +565,7 @@
                         <execution>
                             <id>default-test</id>
                             <configuration>
-                                <argLine>-server -ea -Duser.language=en -XX:-UseSplitVerifier -Xms512m -Xmx1024m -XX:MaxPermSize=512m
-                                    ${surefire.argLine}
+                                <argLine>-server -ea -Duser.language=en -Xms512m -Xmx1024m ${surefire.argLine}
                                 </argLine>
                                 <excludes>
                                     <exclude>**/IT*.java</exclude>
@@ -572,9 +588,7 @@
                             </goals>
                             <configuration>
                                 <!-- Sets the VM argument line used when integration tests are run. -->
-                                <argLine>-server -ea -XX:-UseSplitVerifier -Xms512m -Xmx1024m -XX:MaxPermSize=512m
-                                    -Duser.language=en
-                                    ${failsafeArgLine}
+                                <argLine>-server -ea -Xms512m -Xmx1024m -Duser.language=en ${failsafeArgLine}
                                 </argLine>
                                 <!-- Skips integration tests if the value of skipITs property is true-->
                                 <skipTests>${skipITs}</skipTests>
@@ -592,9 +606,7 @@
                             </goals>
                             <configuration>
                                 <!-- Sets the VM argument line used when integration tests are run. -->
-                                <argLine>-server -ea -XX:-UseSplitVerifier -Xms512m -Xmx1024m -XX:MaxPermSize=512m
-                                    -Duser.language=en
-                                    ${failsafeArgLine}
+                                <argLine>-server -ea -Xms512m -Xmx1024m -Duser.language=en ${failsafeArgLine}
                                 </argLine>
                                 <!-- Skips integration tests if the value of skipITs property is true-->
                                 <skipTests>${skipITs}</skipTests>
@@ -663,7 +675,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.7.201606060606</version>
+                <version>${jacoco.maven.plugin.version}</version>
                 <executions>
                     <execution>
                         <id>pre-unit-test</id>
@@ -768,5 +780,15 @@
                 <module>Domibus-MSH-swagger</module>
             </modules>
         </profile>
+        <!--
+        <profile>
+            <id>run-soapui</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <modules>
+                <module>Domibus-MSH-soapui-tests</module>
+            </modules>
+        </profile>-->
     </profiles>
 </project>
